--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h2>TO-Do List </h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
-                <button onclick="Addtask()">Add</button>
+                <button onclick="Addtask()">Add.</button>
             </div>
             <ul id="list-container">
                 <!-- <li class="checked">task 1</li>
